--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -62,22 +62,9 @@ You can use any or all of the sites at the same time.
 
 ==Trakt.tv==
 
- * From version 2.8.1+, the Trakt.tv support will be moved to its own process plugin called [http://trakt.tv/downloads/mediaportal Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it or you can download MPEI package at any time.
+ * From version 2.8.1+, the Trakt.tv support will be moved to its own plugin called [http://trakt.tv/downloads/mediaportal Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it or you can download MPEI package at any time.
 
-   ===Installation===
-   You can install the Trakt process plugin from the MP-TVSeries installation program, a installation wiki is available [http://code.google.com/p/mptvseries/wiki/Installation?ts=1302228665&updated=Installation# here]. Optionally you can [https://github.com/Technicolour/Trakt-for-Mediaportal/downloads/ download] the TraktPlugin.dll manually and copy it into \Team MediaPortal\MediaPortal\plugins\process
-
-   ===Configuration During Install===
-
- * Download and run the Latest MP-TVSeries [http://www.team-mediaportal.com/extensions/movies-videos/mp-tvseries installer]
- * During Install, Ensure Trakt Feature is enabled
- * Type in your trakt.tv username and password into the password box
- * Check the box for MP-TVSeries and any optional plugin
- * Click Next
- http://mptvseries.googlecode.com/svn/wiki/Images/SetupTrakt.jpg
-
-
-   ===Configuration After Install===
+ ===Configuration After Install===
 
  * Load Mediaportal Configuration, Plugins.
  * Load _Trakt_ which is under 'Windows Plugins'
